fixed alignment bug on hero page

--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -10,11 +10,19 @@
   width: 75%;
 }
 
-.hero-paragraph {
+.subheading {
+  font-size: 24px;
+  font-family: "Geist";
+  font-weight: 600;
+}
+
+.subheading-paragraph {
   text-align: center;
   font-size: 18px;
   font-weight: 500;
   font-family: "Geist";
+  margin-top: 30px;
+  width: 35%;
 }
 
 .section-1,
@@ -23,6 +31,7 @@
   height: 100vh;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .section-1 {
@@ -38,8 +47,8 @@
 .btn-container {
   display: flex;
   justify-content: center;
-  gap: 20px;
-  margin-top: 40px;
+  gap: 6px;
+  margin-top: 20px;
   padding: 20px;
 }
 
@@ -54,6 +63,7 @@
   font-weight: 600;
   font-family: "Geist";
   font-size: 16px;
+  border-radius: 5px;
 }
 
 .subheading-btn-1 {
@@ -64,6 +74,10 @@
 .subheading-btn-2 {
   background: #171a1e;
   color: #ffffff;
+}
+
+.section-2 {
+  padding: 20px;
 }
 
 .section-2-container {
@@ -82,6 +96,7 @@
   font-size: 44px;
   font-weight: 400;
   color: white;
+  width: 70%;
 }
 
 .hubspot-para {
@@ -90,6 +105,21 @@
   font-family: "Geist";
   font-weight: 400;
   font-size: 16px;
+}
+
+.hubspot-btn {
+  background: #ffffff;
+  color: #171a1e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  padding: 10px;
+  cursor: pointer;
+  font-weight: 600;
+  font-family: "Geist";
+  font-size: 16px;
+  border-radius: 5px;
 }
 
 .accordion-container {
