--- a/styles/output.css
+++ b/styles/output.css
@@ -94,11 +94,19 @@ ul a:hover {
   width: 75%;
 }
 
-.hero-paragraph {
+.subheading {
+  font-size: 24px;
+  font-family: "Geist";
+  font-weight: 600;
+}
+
+.subheading-paragraph {
   text-align: center;
   font-size: 18px;
   font-weight: 500;
   font-family: "Geist";
+  margin-top: 30px;
+  width: 35%;
 }
 
 .section-1,
@@ -107,6 +115,7 @@ ul a:hover {
   height: 100vh;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .section-1 {
@@ -122,8 +131,8 @@ ul a:hover {
 .btn-container {
   display: flex;
   justify-content: center;
-  gap: 20px;
-  margin-top: 40px;
+  gap: 6px;
+  margin-top: 20px;
   padding: 20px;
 }
 
@@ -138,6 +147,7 @@ ul a:hover {
   font-weight: 600;
   font-family: "Geist";
   font-size: 16px;
+  border-radius: 5px;
 }
 
 .subheading-btn-1 {
@@ -148,6 +158,10 @@ ul a:hover {
 .subheading-btn-2 {
   background: #171a1e;
   color: #ffffff;
+}
+
+.section-2 {
+  padding: 20px;
 }
 
 .section-2-container {
@@ -166,6 +180,7 @@ ul a:hover {
   font-size: 44px;
   font-weight: 400;
   color: white;
+  width: 70%;
 }
 
 .hubspot-para {
@@ -174,6 +189,21 @@ ul a:hover {
   font-family: "Geist";
   font-weight: 400;
   font-size: 16px;
+}
+
+.hubspot-btn {
+  background: #ffffff;
+  color: #171a1e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  padding: 10px;
+  cursor: pointer;
+  font-weight: 600;
+  font-family: "Geist";
+  font-size: 16px;
+  border-radius: 5px;
 }
 
 .accordion-container {
